// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar renders All items view on desktop 1`] = `
<div
  class="readinglists-nav-bar"
>
  <a
    class="readinglists-special-nav-link readinglists-special-nav-link--active"
  >
    
    All items
    
  </a>
  <div
    class="cdx-menu-button"
  >
    <button
      aria-controls="v-1"
      aria-expanded="false"
      aria-haspopup="menu"
      class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
      id="v-0"
    >
      
      
      Collections 
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            <path
              d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
    <div
      class="cdx-menu-button__menu-wrapper"
    >
      <!--teleport start-->
      <div
        class="cdx-menu cdx-menu-button__menu"
        style="display: none;"
      >
        <ul
          aria-labelledby="v-0"
          class="cdx-menu__listbox"
          id="v-1"
          role="menu"
          tabindex="-1"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <!--v-if-->
        </ul>
      </div>
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`NavigationBar renders All items view on mobile 1`] = `
<div
  class="readinglists-nav-bar"
>
  <a
    class="readinglists-special-nav-link readinglists-special-nav-link--active"
  >
    
    All items
    
  </a>
  <a
    class="readinglists-special-nav-link"
  >
    Collections
  </a>
</div>
`;

exports[`NavigationBar renders Collections view on desktop 1`] = `
<div
  class="readinglists-nav-bar"
>
  <a
    class="readinglists-special-nav-link"
  >
    
    All items
    
  </a>
  <div
    class="cdx-menu-button"
  >
    <button
      aria-controls="v-1"
      aria-expanded="false"
      aria-haspopup="menu"
      class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
      id="v-0"
    >
      
      
      Collections 
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            <path
              d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
    <div
      class="cdx-menu-button__menu-wrapper"
    >
      <!--teleport start-->
      <div
        class="cdx-menu cdx-menu-button__menu"
        style="display: none;"
      >
        <ul
          aria-labelledby="v-0"
          class="cdx-menu__listbox"
          id="v-1"
          role="menu"
          tabindex="-1"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <!--v-if-->
        </ul>
      </div>
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`NavigationBar renders Collections view on mobile 1`] = `
<div
  class="readinglists-nav-bar"
>
  <a
    class="readinglists-special-nav-link"
  >
    
    All items
    
  </a>
  <a
    class="readinglists-special-nav-link"
  >
    Collections
  </a>
</div>
`;

exports[`NavigationBar should populate the dropdown on click 1`] = `
<div
  class="readinglists-nav-bar"
>
  <a
    class="readinglists-special-nav-link readinglists-special-nav-link--active"
  >
    
    All items
    
  </a>
  <div
    class="cdx-menu-button"
  >
    <button
      aria-controls="v-1"
      aria-expanded="true"
      aria-haspopup="menu"
      class="cdx-button cdx-button--action-progressive cdx-button--weight-quiet cdx-button--size-medium"
      id="v-0"
    >
      
      
      Collections 
      <span
        class="cdx-icon cdx-icon--medium"
      >
        <svg
          aria-hidden="true"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!--v-if-->
          <g>
            <path
              d="m16.7 8-6 6H9.3l-6-6 1.4-1.4 5.3 5.3 5.3-5.3z"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
    <div
      class="cdx-menu-button__menu-wrapper"
    >
      <!--teleport start-->
      <div
        class="cdx-menu cdx-menu-button__menu"
        style="visibility: hidden; position: absolute; top: 0px; left: 0px; transform: translate(0px, 4px); width: -32px; max-height: 128px;"
      >
        <ul
          aria-labelledby="v-0"
          class="cdx-menu__listbox"
          id="v-1"
          role="menu"
          style="max-height: 2px;"
          tabindex="-1"
        >
          <!--v-if-->
          <!--v-if-->
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-1"
            role="option"
          >
            
            
            
            <span
              class="cdx-menu-item__content"
            >
              <span
                class="cdx-icon cdx-icon--medium cdx-menu-item__icon"
              >
                <svg
                  aria-hidden="true"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!--v-if-->
                  <g>
                    <path
                      d="M11 9h7v2h-7v7H9v-7H2V9h7V2h2z"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  create new collection
                </bdi>
              </span>
            </span>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-2"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  A
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-3"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  B
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-4"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  C
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-5"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  D
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-6"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  E
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-7"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  F
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-8"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  G
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-9"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  H
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-10"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  I
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-11"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  J
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <li
            aria-disabled="false"
            class="cdx-menu-item cdx-menu-item--enabled"
            id="v-2-12"
            role="option"
          >
            
            
            
            <a
              class="cdx-menu-item__content"
            >
              
              <span
                class="cdx-menu-item__text"
              >
                <bdi>
                  K
                </bdi>
              </span>
              
            </a>
            
            
            
          </li>
          
          
          <!--v-if-->
        </ul>
      </div>
      <!--teleport end-->
    </div>
  </div>
</div>
`;
